--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,35 @@
-.nav-wrapper{
+.body {
+    margin: 0px;
+    padding: 0px;
+}
+
+.nav-wrapper {
     background-color: #6f4037;
     padding-left: 5px;
 }
 
 .slider .indicators .indicator-item.active {
     background: #6f4037 !important;
-  }
+}
 
-  .move{
-      margin-top: 20px;
-      margin-bottom: 20px;
-  }
+.move {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
-.parallax-container{
+.parallax-container {
     min-height: 380px;
     height: auto;
 }
 
-.icon-coffee{
+.icon-coffee {
     color: #6f4037;
 }
 
-.footer-one{
+.footer-one {
     background: #6f4037;
 }
 
-.footer-two{
+.footer-two {
     background: #462822;
 }
